samples/_failures_safe/1761664688_ccaf25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5deaea1.c: In function ‘main’:
./samples/SAFE/__tmp_c5deaea1.c:104:13: error: expected declaration or statement at end of input
  104 |             printf("Invalid log entry format. Please use: YYYY-MM-DD HH:MM:SS LEVEL message\n");
      |             ^~~~~~
./samples/SAFE/__tmp_c5deaea1.c:104:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5deaea1.c:104:13: error: expected declaration or statement at end of input
